--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li class="logo">
             <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
                class="brand-logo grey-blue-text">
-                <img src="/img/profile_pic.jpg" class="circle img-responsive profile-pic" alt="profilePicture">
+                <img src="img/profile_pic.jpg" class="circle img-responsive profile-pic" alt="profilePicture">
             </a>
         </li>
         <li class="bold">
@@ -214,7 +214,7 @@ justAWebDesignUsername" target="_blank">
                 <div class="col s12 m6 l4">
                     <div class="card medium">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img alt="music streaming app" src="/img/literature.jpg" style="height: 100%; width: 100%"
+                            <img alt="music streaming app" src="img/literature.jpg" style="height: 100%; width: 100%"
                                  class="activator"/>
                         </div>
                         <div class="card-content">
@@ -261,7 +261,7 @@ justAWebDesignUsername" target="_blank">
                 <div class="col s12 m6 l4">
                     <div class="card medium">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img alt="Screenshot of  web app" src="/img/drawing.jpg" style="height: 100%; width: 100%"
+                            <img alt="Screenshot of  web app" src="img/drawing.jpg" style="height: 100%; width: 100%"
                                  class="activator"/>
                         </div>
                         <div class="card-content">
@@ -279,7 +279,7 @@ justAWebDesignUsername" target="_blank">
                 <div class="col s12 m6 l4">
                     <div class="card medium">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img alt="Screenshot of  web app" src="/img/travelling.jpg"
+                            <img alt="Screenshot of  web app" src="img/travelling.jpg"
                                  style="height: 100%; width: 100%" class="activator"/>
                         </div>
                         <div class="card-content">
