--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ justAWebDesignUsername" target="_blank">
                 <div class="col s12 m6 l4">
                     <div class="card medium">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img alt="Screenshot of  web app" src="/img/tableTennis.jpg"
+                            <img alt="Screenshot of  web app" src="img/tableTennis.jpg"
                                  style="height: 100%; width: 100%" class="activator"/>
                         </div>
                         <div class="card-content">
